@@ -41,6 +41,8 @@ New in v0.7.07 (2016/01/??)
   - added flush after every write for all FileobjHooked files which
     should prevent some errors when duplicity is forcibly closed.
 * Fix bug #1540279 - mistake in --help
+* Applied patch from kay-diam to fix error handling in ssh pexpect,
+  fixes bug #1541314
 
 
 New in v0.7.06 (2015/12/07)
